bochs (2.4.6-4) UNRELEASED; urgency=low

  * Do not install the ne2k plugin on systems were it's not supported.
  * Handler Linux 3.x kernels the same way as 2.6.x. (Closes: #647195)

 -- Guillem Jover <guillem@debian.org>  Mon, 31 Oct 2011 16:46:44 +0100

bochs (2.4.6-3) unstable; urgency=low

  * Detect which of jade or openjade is installed at configure time, and
    use the one found. (Closes: #633971)

 -- Guillem Jover <guillem@debian.org>  Mon, 25 Jul 2011 07:59:50 +0200

bochs (2.4.6-2) unstable; urgency=low

  * Set SHELL variables in Makefile.in to @SHELL@ instead of hardcoding
    them to /bin/sh, which confuses libtool as it might get configured
    for bash. (Closes: #625183)
  * Discard .eh_frame sections from the PC BIOS linker scripts, as they
    cause a build problem due to an overlap with the .data section.
  * Use jade instead of docbook2html, and thus switch Build-Depends-Indep
    from docbook-utils to docbook-dsssl.
  * Now using Standards-Version 3.9.2 (no changes needed).

 -- Guillem Jover <guillem@debian.org>  Wed, 04 May 2011 05:29:04 +0200

bochs (2.4.6-1) unstable; urgency=low

  * New upstream release.
    - Refresh patches.
    - debian/patches/11_docbook_section_name.patch: Remove, merged upstream.
    - debian/patches/12_use_so_plugins.patch: Likewise.
  * Install new hdimage and soundmod plugins.
  * Use linux-any instead of explicit list of architectures for libasound2-dev
    in Build-Depends.
  * Update tarball.sh to use the new svn repository instead of cvs.
  * Update debian/copyright with all copyright holders and years.
  * Now using Standards-Version 3.9.1 (no changes needed).
  * Suggest grub-rescue-pc instead of dummy transitional grub-disk package.
    (Closes: #607208)

 -- Guillem Jover <guillem@debian.org>  Sun, 27 Feb 2011 04:08:32 +0100

bochs (2.4.5-1) unstable; urgency=low

  * New upstream release.
    - Refresh patches.
    - debian/patches/patches/14_fix_gdbstubs_FTBFS.patch: Remove.