@@ -21,11 +21,11 @@
 +l l l.
 +Bochs@Machine/Compiler@Mips
 +_
-+2.3.7@3.2Ghz Intel Core 2 Q9770 with WinXP/g++ 3.4@50 to 55 Mips
-+2.3.7@2.6Ghz Intel Core 2 Duo with WinXP/g++ 3.4@38 to 43 Mips
-+2.2.6@2.6Ghz Intel Core 2 Duo with WinXP/g++ 3.4@21 to 25 Mips
-+2.2.6@2.1Ghz Athlon XP with Linux 2.6/g++ 3.4@12 to 15 Mips
-+2.0.1@1.6Ghz Intel P4 with Win2000/g++ 3.3@5 to  7 Mips
++2.3.7@3.2Ghz Intel Core 2 Q9770 w/ WinXP/g++ 3.4@50-55 Mips
++2.3.7@2.6Ghz Intel Core 2 Duo w/ WinXP/g++ 3.4@38-43 Mips
++2.2.6@2.6Ghz Intel Core 2 Duo w/ WinXP/g++ 3.4@21-25 Mips
++2.2.6@2.1Ghz Athlon XP w/ Linux 2.6/g++ 3.4@12-15 Mips
++2.0.1@1.6Ghz Intel P4 w/ Win2000/g++ 3.3@5-7 Mips
 +.TE
  
   [1]  IPS measurements depend on OS and compiler
